--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
 streamlit==1.28.0
-torch==2.1.0
+torch==2.1.0 --index-url https://download.pytorch.org/whl/cpu
 transformers==4.35.0
 numpy==1.24.3
 nltk==3.8.1
-sentencepiece==0.1.99
-protobuf==3.20.3
