--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,3 +1,10 @@
+[theme]
+primaryColor = "#4F46E5"
+backgroundColor = "#FFFFFF"
+secondaryBackgroundColor = "#F0F2F6"
+textColor = "#262730"
+font = "sans serif"
+
 [server]
 maxUploadSize = 50
 enableCORS = false
@@ -5,4 +12,3 @@ enableXsrfProtection = true
 
 [browser]
 gatherUsageStats = false
-serverAddress = "auto"
