--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 streamlit==1.28.0
 transformers==4.35.0
-torch==2.1.0
+torch==2.1.0 --index-url https://download.pytorch.org/whl/cpu
 numpy==1.24.3
+sentencepiece==0.1.99
