Modify requirements for PyTorch and add new packages
Updated PyTorch and added bitsandbytes and accelerate.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 streamlit==1.28.0
+torch==2.1.0
 transformers==4.35.0
-torch==2.1.0 --index-url https://download.pytorch.org/whl/cpu
 numpy==1.24.3
-sentencepiece==0.1.99
+accelerate==0.24.1
+--find-links https://github.com/jllllll/bitsandbytes/releases/tag/0.41.1
+bitsandbytes==0.41.1
