--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 streamlit==1.28.0
 torch==2.9.1
-transformers==4.40.0
+transformers>=4.41.0  # Newer version might have better Python 3.13 support
 numpy==1.26.4
